--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
-name: John Doe
-bio: A Man who travels the world eating noodles
+name: Achmad Zaenuri Dahlan Putra
+bio: A Man who loves playing CTF
 
 # twitter summary info
 description: A blog about technology and stuff related
@@ -53,19 +53,7 @@ medium: medium
 # lanyrd: mylanyrd
 email: myemail@gmail.com
 
-authors:
-    johndoe:
-        name: John Doe
-        bio: A Man who travels the world eating noodles
-        external-image: false
-        picture: assets/images/profile.jpg
-        twitter: johndoe
-    jamesfoster:
-        name: James Foster
-        bio: A Man who develops software with coffee
-        external-image: false
-        picture: assets/images/james.jpg
-        twitter: jamesfoster
+#authors:
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
