--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: ZenN
-bio: @kosongblong
+bio: kosongblong
 
 # twitter summary info
 description: A blog about technology and stuff related
@@ -48,7 +48,7 @@ github: ret2ex
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: @kosongblong2
+medium: kosongblong2
 # vimeo: myvimeo
 # lanyrd: mylanyrd
 email: kosongisnotzero@gmail.com
