--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: ZenN
-bio: \@kosongblong
+bio: "@kosongblong"
 
 # twitter summary info
 description: A blog about technology and stuff related
