--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ github: ret2ex
 medium: kosongblong2
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: kosongisnotzero@gmail.com
+email: kosongblong2@gmail.com
 
 #authors:
 
