--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ github: ret2ex
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: kosongblong2
+medium: ret2ex
 # vimeo: myvimeo
 # lanyrd: mylanyrd
 email: kosongblong2@gmail.com
